--- a/goonestepClothesAppBackEnd/src/main/resources/application.properties
+++ b/goonestepClothesAppBackEnd/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url=  jdbc:mysql://localhost:3306/goonestep_clothesDB?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= sth@2121999
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.format_sql = true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+# App Properties
+goonestep.app.jwtSecret= goonestep
+goonestep.app.jwtExpirationMs= 12300000
+spring.security.user.name=root
+spring.security.user.password=root
