--- a/goonestepClothesAppBackEnd/src/main/resources/application.properties
+++ b/goonestepClothesAppBackEnd/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password= sth@2121999
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=never
 
 
 # App Properties
