--- a/goonestepClothesAppBackEnd/pom.xml
+++ b/goonestepClothesAppBackEnd/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.7.RELEASE</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.goonestep</groupId>
 	<artifactId>goonestepClothesAppBackEnd</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.7.3-SNAPSHOT</version>
 	<name>goonestepClothesAppBackEnd</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -23,11 +23,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>2.3.1</version>
-    </dependency>
+    </dependency> -->
 <dependency>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-web</artifactId>
